--- a/src/Client/src/View/client.fxml
+++ b/src/Client/src/View/client.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="mainPane" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/8.0.121"
+<AnchorPane fx:id="mainPane" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/8.0.141"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerClient">
     <children>
         <HBox fx:id="upperPanel" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
@@ -38,7 +38,8 @@
                  AnchorPane.topAnchor="25" AnchorPane.bottomAnchor="0">
             <tabs>
                 <Tab fx:id="clientsTab" text="Участники" closable="false">
-                    <ListView id="clientsPanel" fx:id="clientsList" onMouseClicked="#listClick" prefWidth="150" VBox.vgrow="ALWAYS"/>
+                    <ListView id="clientsPanel" fx:id="clientsList" onMouseClicked="#listClick" prefWidth="150"
+                              VBox.vgrow="ALWAYS"/>
                 </Tab>
             </tabs>
         </TabPane>
